tests/semantic/fail/array-type-not-declared.tiger
let
      var x := data[4] of nil
in

end
